# a2r

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  towncrier.toml
a2r/core/cleaner/: service.py
a2r/management/: cli.py
arcx/management/: cli.py
arto/: __init__.py
arto/conf/: __init__.py  global_settings.py  reader.py
arto/core/: md5.py  utils.py
arto/core/cleaner/: __init__.py  model.py  service.py
arto/core/safe_rm/: __init__.py  service.py
arto/management/: cli.py
arto/utils/: log.py
tests/cleaner/: test_service.py
